majority of sprint3